--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "start": "npx live-server --no-browser"
   },
-  "name": "local-aria2-webui",
+  "name": "@masx200/local-aria2-webui",
   "version": "1.0.0",
   "main": "index.js",
   "repository": {
