--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "scripts": {
-    "start": "npx live-server --no-browser"
+    "start": "npx live-server --no-browser --host=[::]"
   },
   "name": "@masx200/local-aria2-webui",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.js",
   "repository": {
     "type": "git",
