--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "scripts": {
-    "start": "npx live-server --no-browser --host=::"
-  },
-  "name": "@masx200/local-aria2-webui",
-  "version": "1.0.2",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/masx200/local-aria2-webui.git"
-  },
-  "author": "masx200 <masx200@qq.com>",
-  "license": "MIT",
-  "description": "本地化的 aria2 webui",
-  "bugs": {
-    "url": "https://github.com/masx200/local-aria2-webui/issues"
-  },
-  "homepage": "https://github.com/masx200/local-aria2-webui#readme",
-  "keywords": [],
-  "dependencies": {
-    "live-server": "^1.2.1"
-  }
+    "bin": "cli.js",
+    "scripts": {
+        "start": "npx live-server --no-browser --verbose",
+        "format": "prettier --write *.js *.json *.md *.css *.html"
+    },
+    "name": "@masx200/local-aria2-webui",
+    "version": "1.0.3",
+    "main": "index.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/masx200/local-aria2-webui.git"
+    },
+    "author": "masx200 <masx200@qq.com>",
+    "license": "MIT",
+    "description": "本地化的 aria2 webui",
+    "bugs": {
+        "url": "https://github.com/masx200/local-aria2-webui/issues"
+    },
+    "homepage": "https://github.com/masx200/local-aria2-webui#readme",
+    "keywords": [],
+    "devDependencies": {
+        "prettier": "^2.1.1"
+    },
+    "dependencies": {
+        "live-server": "^1.2.1"
+    }
 }
