--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.com"
+    },
     "type": "module",
     "bin": "cli.js",
     "scripts": {
