--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "module",
     "bin": "cli.js",
     "scripts": {
-        "start": "npx live-server --no-browser --verbose",
+        "start": "node cli.js",
         "format": "prettier --write *.js *.json *.md *.css *.html"
     },
     "name": "@masx200/local-aria2-webui",
