--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
     },
     "dependencies": {
         "live-server": "^1.2.1"
+    },
+    "resolutions": {
+        "set-value": "4.1.0",
+        "glob-parent": "6.0.1"
     }
 }
