--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "format": "prettier --write *.js *.json *.md *.css *.html */*.html */*.css"
     },
     "name": "@masx200/local-aria2-webui",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "main": "index.js",
     "repository": {
         "type": "git",
@@ -25,6 +25,7 @@
     "homepage": "https://github.com/masx200/local-aria2-webui#readme",
     "keywords": [],
     "devDependencies": {
+        "@types/node": "^22.9.0",
         "prettier": "^3.1.1"
     },
     "dependencies": {
