--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -27,7 +27,7 @@ jobs:
                   node-version: 20
                   registry-url: https://registry.npmjs.org/
             - run: npx -y cnpm i
-            - run: npm run build
+            #- run: npm run build
             - run: npm publish
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
